# Olio-ohjelmointi

./: .gitignore
h1/: main.cpp
h2a/: car.cpp  car.h  main.cpp  rectangle.cpp  rectangle.h  student.h
h2b/: car.cpp  car.h  main.cpp
h3a/: chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
h3b/: animal.cpp  animal.h  dog.cpp  dog.h  main.cpp
h4/: car.cpp  car.h  engine.cpp  engine.h  main.cpp  wheel.cpp  wheel.h
h5_1/: CMakeLists.txt  main.cpp
h5_2/: CMakeLists.txt  classa1.h  main.cpp
h6a/: h6a.pro  myclass.cpp
h6b/: exampleclass.h  main.cpp
